fix scrollbar

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -149,20 +149,29 @@ body {
     padding-top: 2px;
     padding-bottom: 9px;
     overflow-y: auto;
+    scrollbar-width: thin;
     scrollbar-color: transparent transparent;
 }
 
-/* skill issue */
-.entryContainer::-webkit-scrollbar {
-    width: 7px;
+/* Modern browsers with `scrollbar-*` support */
+@supports (scrollbar-width: auto) {
+    .entryContainer {
+        scrollbar-color: var(--scrollbar-color-thumb) var(--scrollbar-color-track);
+        scrollbar-width: var(--scrollbar-width);
+    }
 }
-  
-.entryContainer::-webkit-scrollbar-thumb {
-background-color: #888;
-}
-  
-.entryContainer::-webkit-scrollbar-thumb:hover {
- background-color: #555;
+
+/* Legacy browsers with `::-webkit-scrollbar-*` support */
+@supports selector(::-webkit-scrollbar) {
+    .entryContainer::-webkit-scrollbar-thumb {
+        background-color: #888;
+    }
+    .entryContainer::-webkit-scrollbar-thumb:hover {
+        background-color: #555;
+    }
+    .entryContainer::-webkit-scrollbar {
+        width: 7px;
+    }
 }
 
 .textContainer {
@@ -319,21 +328,31 @@ a[link]:hover {
     box-shadow: inset 0 0 0 2px #00000040, 0px 0px 16px 4px #00000033;
     justify-content: center;
     font-size: 16px;
+    scrollbar-width: thin;
     scrollbar-color: transparent transparent;
 }
 
-/* skill issue */
-#serverInfo::-webkit-scrollbar {
-    width: 7px;
+/* Modern browsers with `scrollbar-*` support */
+@supports (scrollbar-width: auto) {
+    #serverInfo {
+        scrollbar-color: var(--scrollbar-color-thumb) var(--scrollbar-color-track);
+        scrollbar-width: var(--scrollbar-width);
+    }
 }
-  
-#serverInfo::-webkit-scrollbar-thumb {
-background-color: #888;
+
+/* Legacy browsers with `::-webkit-scrollbar-*` support */
+@supports selector(::-webkit-scrollbar) {
+    #serverInfo::-webkit-scrollbar-thumb {
+        background-color: #888;
+    }
+    #serverInfo::-webkit-scrollbar-thumb:hover {
+        background-color: #555;
+    }
+    #serverInfo::-webkit-scrollbar {
+        width: 7px;
+    }
 }
-  
-#serverInfo::-webkit-scrollbar-thumb:hover {
- background-color: #555;
-}
+
 
 hr {
     margin: 6px 0px 0px;
